# openbmc-util

./: README.md
bios/: README.md
bios/tool/AfuEfi64/: readme.txt
espitest/: espitest.bb
espitest/files/: Makefile
espitest/files/src/: oobtest.c  vwtest.c
jtag_socket_client_arm/: README.md  jtag_arm9_func.py  jtag_client.py  jtag_drv.py
ldap_server/: slapd.conf
ldap_server/ldif/: ap_group.ldif  bdn.ldif  bmc.ldif  group.ldif  people.ldif  privRole.ldif
ldap_server/schema/: user_exp.schema
loadsvf/: Makefile.in  README.md  configure  configure.ac
loadsvf/src/: Makefile.am  Makefile.in  jtag.c  jtag.h  main.c  svf.c
vdm-test/: phosphor-vdm-test.bb
vdm-test/phosphor-vdm-test/: Makefile.am  configure.ac  main.cpp  vdm_module.h  vdm_per_test.cpp  vdm_test.c
virtual_media/: VirtualMedia.pro.user.bec46eb
virtual_media/NBDServerWSLinux/: mainwindow.cpp  mainwindow.h  mainwindow.ui  nbd-server-ws.cpp  websocket-client.cpp
virtual_media/NBDServerWSWindows/: elapsedtimer.cpp  elapsedtimer.h  main.cpp  mainwindow.cpp  mainwindow.ui  nbd-server-ws.cpp  translations.qrc  websocket-client.cpp
virtual_media/NBDServerWSWindows/lang/: remotemediaclient_zh_TW.ts
virtual_media/QtWebsocket/: QWsSocket.cpp  QWsSocket.h
virtual_media_openbmc2.6/: VirtualMedia.pro  VirtualMedia.pro.user.b848732
virtual_media_openbmc2.6/NBDServerWSLinux/: NBDServerWSLinux.pro  gui_icons.qrc  mainwindow.cpp  nbdprotocol.h  websocket-client.cpp
virtual_media_openbmc2.6/NBDServerWSWindows/: NBDProtocol.h  NBDServerWSWindows.pro  NBDServerWSWindows.rc  README  disk.cpp  disk.h  droppablelineedit.cpp  droppablelineedit.h  globaldebug.h  gui_icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  nbd-server-ws.cpp  resource.h  websocket-client.cpp
virtual_media_openbmc2.6/NBDServerWSWindows/lang/: remotemediaclient_zh_TW.qm
virtual_media_openbmc2.6/QtWebsocket/: QWsHandshake.cpp  QWsHandshake.h  QWsSocket.cpp
xfer_mbox_mem/: DMI  Makefile.am  README.md  b.sh  configure.ac  xfer_mbox_mem
xfer_mbox_mem/cleanup/: Makefile.am  main.cpp
xfer_mbox_mem/tools/: Makefile.am  handler.cpp  handler.hpp  interface.hpp  ipmi_errors.hpp  ipmi_handler.cpp  ipmi_handler.hpp  ipmi_interface.hpp  main.cpp  p2a.cpp  p2a.hpp  updater.cpp  updater.hpp
